--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
       .contact-wrap { grid-template-columns: 1fr; gap: 2.5rem; }
 
       .frow { grid-template-columns: 1fr; }
-      .photo-break img { height: 240px; }
+      .photo-break img { height: clamp(300px, 50vw, 480px); }
     }
   </style>
 </head>
