--- a/index.html
+++ b/index.html
@@ -411,14 +411,14 @@
       }
 
       .hero, .sec { padding-inline: 1.5rem; }
-      .photo-break { padding: 0 1.5rem; }
+      .photo-break { padding: 0; }
 
       .profile-grid,
       .strengths-grid,
       .contact-wrap { grid-template-columns: 1fr; gap: 2.5rem; }
 
       .frow { grid-template-columns: 1fr; }
-      .photo-break img { height: clamp(300px, 50vw, 480px); }
+      .photo-break img { height: 60vw; }
     }
   </style>
 </head>
